Fix Chip's max-content overflowing SiteOrigin

--- a/ui/components/ui/chip/chip.scss
+++ b/ui/components/ui/chip/chip.scss
@@ -63,4 +63,8 @@
       margin-right: 8px;
     }
   }
+
+  &--max-content {
+    width: max-content;
+  }
 }
