--- a/ui/components/ui/site-origin/index.scss
+++ b/ui/components/ui/site-origin/index.scss
@@ -1,12 +1,6 @@
 .site-origin {
-  max-width: 300px;
-
   .chip__left-icon {
     padding: 4px 0 4px 8px;
-  }
-
-  .chip {
-    width: initial !important;
   }
 
   span {
